Bug 520826: [9] detect and report "API leaks"
Change-Id: Ib41d97fc7572208f0d457b06c3b3c4e8f84b027c